--- a/adminapp/templates/adminside/orderlist.html
+++ b/adminapp/templates/adminside/orderlist.html
@@ -1,73 +1,197 @@
 {% extends 'dashboard.html' %}
-{% block userlist %}
- <style>
-        #userlist table {
-            /* Add your desired styles here */
-            /* For example: */
-            border: 3px solid rgb(247, 245, 245);
-            background-color: #ba6c7b;
-            table-layout: auto;
+{% load static %}
+{% block extra_link %}
+
+<!-- Data Table JS
+		============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/jquery.dataTables.min.css' %}">
+
+<!-- responsive CSS
+		============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/responsive.css' %}">
         
-        }
-    </style>
-    
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
+        <!-- Google Fonts
+            ============================================ -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
+        <!-- Bootstrap CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/bootstrap.min.css' %}">
+        <!-- font awesome CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/font-awesome.min.css' %}">
+        <!-- owl.carousel CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
+        <link rel="stylesheet" href="{% static 'csss/owl.theme.css' %}">
+        <link rel="stylesheet" href="{% static 'csss/owl.transitions.css' %}">
+        <!-- meanmenu CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/meanmenu/meanmenu.min.css' %}">
+        <!-- animate CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/animate.css' %}">
+        <!-- normalize CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/normalize.css' %}">
+        <!-- wave CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/wave/waves.min.css' %}">
+        <link rel="stylesheet" href="{% static 'csss/wave/button.css' %}">
+        <!-- mCustomScrollbar CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'css/scrollbar/jquery.mCustomScrollbar.min.css' %}">
+        <!-- Notika icon CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/notika-custom-icon.css' %}">
+        <!-- Data Table JS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/jquery.dataTables.min.css' %}">
+        <!-- main CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/main.css' %}">
+        <!-- style CSS
+            ============================================ -->
+        <link rel="stylesheet" href="style.css">
+        <!-- responsive CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/responsive.css' %}">
+        <!-- modernizr JS
+            ============================================ -->
+        <script src="{% static 'js/vendor/modernizr-2.8.3.min.js' %}"></script>
+{% endblock extra_link %}
+{% block userlist %}
 
+ <div class="data-table-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="data-table-list">
+                    <div class="basic-tb-hd">
+                        <h2>Order List</h2>
 
-<div class="container">
-<div class="row d-flex">
-<div class="col-lg-12 justify-content-center" id="userlist">
-
-<table  class=" custome table-bordered" style="margin: 20px auto;font-weight:bold;">
-    <thead>
-        <tr >
-            <th class="text-white p-3"> Order ID</th>
-            <th class="text-white p-3"> User Email</th>
-            <th class=" text-white p-3"> quantity</th>
-            <th class="text-white p-3"> Price</th>
-            <th class="text-white p-3"> Status</th>
-            <th class="text-white p-3"> Order Date </th>
-
-        </tr>
-    </thead>
-    <tbody>
-        {% for order in orders %}
-        <tr>
-        <td class=" custom text-white  p-3">{{order.id}}</td>
-        <td class="custom text-white  p-3">{{order.user.email}}</td>
-        <td class="custom text-white p-3"> {{order.total_qnty}}</td>
-        <td class="custom  text-white p-3">{{order.grand_total}}</td>
-        <td class="custom text-white p-3" > 
-            <form action="{% url 'update_status' order.id %}" method="post">
-            {% csrf_token %}
-            <select name="status">
-              {% for choice in status_choices %}
-              <option value="{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
-              {% endfor %}
-            </select>
-            <button type="submit">Update</button>
-          </form> </td>
-        <td class="custom text-white p-3">{{order.created_at}} </td></tr>
-        {% endfor %}
-    </tbody>
-
-
-
-</table>
-
-
-
+                    </div>
+                    <div class="table-responsive">
+                        <table id="data-table-basic" class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th> Order ID</th>
+                                    <th> User Email</th>
+                                    <th> quantity</th>
+                                    <th> Price</th>
+                                    <th> Status</th>
+                                    <th> Order Date </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for order in orders %}
+                                <tr>
+                                    <td>{{order.id}}</td>
+                                    <td >{{order.user.email}}</td>
+                                    <td> {{order.total_qnty}}</td>
+                                    <td>{{order.grand_total}}</td>
+                                    <td> 
+                                        <form action="{% url 'update_status' order.id %}" method="post">
+                                        {% csrf_token %}
+                                        <select name="status">
+                                          {% for choice in status_choices %}
+                                          <option value="{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
+                                          {% endfor %}
+                                        </select>
+                                        <button type="submit">Update</button>
+                                      </form> </td>
+                                    <td>{{order.created_at}}</td>
+                                    {% endfor %}
+                                   
+                                </tr>
+                               
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th> Order ID</th>
+                                    <th> User Email</th>
+                                    <th> quantity</th>
+                                    <th> Price</th>
+                                    <th> Status</th>
+                                    <th> Order Date </th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-</div>
-
-</div>
-
-
-        <!-- </div> </div> -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
+<!-- Data Table area End-->
+<script src="{% static 'jss/data-table/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'jss/data-table/data-table-act.js' %}"></script>
+  <!-- jquery
+		============================================ -->
+        <script src="{% static 'jss/vendor/jquery-1.12.4.min.js' %}"></script>
+        <!-- bootstrap JS
+            ============================================ -->
+        <script src="{% static 'jss/bootstrap.min.js' %}"></script>
+        <!-- wow JS
+            ============================================ -->
+        <script src="{% static 'jss/wow.min.js' %}"></script>
+        <!-- price-slider JS
+            ============================================ -->
+        <script src="{% static 'jss/jquery-price-slider.js' %}"></script>
+        <!-- owl.carousel JS
+            ============================================ -->
+        <script src="{% static 'jss/owl.carousel.min.js' %}"></script>
+        <!-- scrollUp JS
+            ============================================ -->
+        <script src="{% static 'jss/jquery.scrollUp.min.js' %}"></script>
+        <!-- meanmenu JS
+            ============================================ -->
+        <script src="{% static 'jss/meanmenu/jquery.meanmenu.js' %}"></script>
+        <!-- counterup JS
+            ============================================ -->
+        <script src="{% static 'jss/counterup/jquery.counterup.min.js' %}"></script>
+        <script src="jss/counterup/waypoints.min.js' %}"></script>
+        <script src="{% static 'jss/counterup/counterup-active.js' %}"></script>
+        <!-- mCustomScrollbar JS
+            ============================================ -->
+        <script src="{% static 'jss/scrollbar/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+        <!-- sparkline JS
+            ============================================ -->
+        <script src="{% static 'jss/sparkline/jquery.sparkline.min.js' %}"></script>
+        <script src="{% static 'jss/sparkline/sparkline-active.js' %}"></script>
+        <!-- flot JS
+            ============================================ -->
+        <script src="{% static 'jss/flot/jquery.flot.js' %}"></script>
+        <script src="{% static 'jss/flot/jquery.flot.resize.js' %}"></script>
+        <script src="{% static 'jss/flot/flot-active.js' %}"></script>
+        <!-- knob JS
+            ============================================ -->
+        <script src="{% static 'jss/knob/jquery.knob.js' %}"></script>
+        <script src="{% static 'jss/knob/jquery.appear.js' %}"></script>
+        <script src="{% static 'jss/knob/knob-active.js' %}"></script>
+        <!--  Chat JS
+            ============================================ -->
+        <script src="{% static 'jss/chat/jquery.chat.js' %}"></script>
+        <!--  todo JS
+            ============================================ -->
+        <script src="{% static 'jss/todo/jquery.todo.js' %}"></script>
+        <!--  wave JS
+            ============================================ -->
+        <script src="{% static 'jss/wave/waves.min.js' %}"></script>
+        <script src="{% static 'jss/wave/wave-active.js' %}"></script>
+        <!-- plugins JS
+            ============================================ -->
+        <script src="{% static 'jss/plugins.js' %}"></script>
+        <!-- Data Table JS
+            ============================================ -->
+        <script src="{% static 'jss/data-table/jquery.dataTables.min.js' %}"></script>
+        <script src="{% static 'jss/data-table/data-table-act.js' %}"></script>
+        <!-- main JS
+            ============================================ -->
+        <script src="{% static 'jss/main.js' %}"></script>
+        <!-- tawk chat JS
+            ============================================ -->
+        <!-- <script src="{% static 'jss/tawk-chat.js' %}"></script> -->
 {% endblock userlist %}
 
 
