--- a/adminapp/templates/adminside/orderlist.html
+++ b/adminapp/templates/adminside/orderlist.html
@@ -40,7 +40,7 @@
         <link rel="stylesheet" href="{% static 'csss/wave/button.css' %}">
         <!-- mCustomScrollbar CSS
             ============================================ -->
-        <link rel="stylesheet" href="{% static 'css/scrollbar/jquery.mCustomScrollbar.min.css' %}">
+        <link rel="stylesheet" href="{% static 'csss/scrollbar/jquery.mCustomScrollbar.min.css' %}">
         <!-- Notika icon CSS
             ============================================ -->
         <link rel="stylesheet" href="{% static 'csss/notika-custom-icon.css' %}">
@@ -52,7 +52,7 @@
         <link rel="stylesheet" href="{% static 'csss/main.css' %}">
         <!-- style CSS
             ============================================ -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="{% static 'csss/style.css' %}">
         <!-- responsive CSS
             ============================================ -->
         <link rel="stylesheet" href="{% static 'csss/responsive.css' %}">
@@ -72,7 +72,7 @@
 
                     </div>
                     <div class="table-responsive">
-                        <table id="data-table-basic" class="table  table-striped">
+                        <table id="data-table-basic"class="table  table-striped">
                             <thead>
                                 <tr>
                                     <th> Order ID</th>
@@ -81,11 +81,12 @@
                                     <th> Price</th>
                                     <th> Status</th>
                                     <th> Order Date </th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for order in orders %}
-                                <tr>
+                                <tr class="order-row" data-order-id="{{ order.id }}">
                                     <td>{{order.id}}</td>
                                     <td >{{order.user.email}}</td>
                                     <td> {{order.total_qnty}}</td>
@@ -103,13 +104,75 @@
                                         </select>
                                         <button class="btn btn-success m-2 " type="submit">Update</button>
                                       </form> </td>
-
-
-
-
-
-
                                     <td>{{order.created_at}}</td>
+                                    <td><a href="{% url 'get_order_products' order.id %}" class="btn btn-sm btn-primary">View Details</a></td>
+                                    <!-- <td>
+                                     <div class="modals-default-cl">
+                                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModalthree">Modal Large</button>
+                                        
+                                        <div class="modal fade" aria-hidden="true" id="myModalthree" role="dialog">
+                                            <div class="modal-dialog modal-large">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                    </div>
+                                                    <div class="modal-body align-content-lg-start">
+                                                    <p>
+
+                                                        <table  class="table table-responsive">
+                                                            <thead>
+                                                              <tr>
+                                                                <th>Product Image</th>
+                                                                <th>Product Name</th>
+                                                                <th>Quantity</th>
+                                                                <th>Unit Price</th>
+                                                                <th>Total Price</th>
+                                                                <th>Size</th>
+                                                                <th>Color</th>
+                                                              </tr>
+                                                           </thead>
+                                                            <tbody> 
+                                    
+                                   
+                                                                {% for pr in order.orderproduct.all %}
+                                                              <tr>
+                                                               
+                                                                <td>  
+                                                                    
+                                                                    
+                                                                    {% with product_variant=pr.product_variant %}
+                                                                    {% with product=product_variant.prod_id %}
+                                                                        {% with product_img=product.product_image.first %}
+                                                                <img src="{{product_img.image.url}}" alt="" style="width: 50px;">
+                                                                        {% endwith %}
+                                                                    {% endwith %}
+                                                                {% endwith %}</td>
+                                                                        
+                                                                <td>{{pr.product_variant.prod_id.pr_name}}</td>   
+                                                                <td>{{pr.quantity}}</td>
+                                                                <td>{{pr.price}}</td>
+                                                                <td>{{pr.item_total_price}}</td>
+                                                                <td>{{pr.product_variant.size}}</td>
+                                                                <td>{{pr.product_variant.color}}</td>
+                                                              </tr>
+                                                              {% endfor %} 
+                                                        
+                                                            </tbody>
+                                                          </table>
+                                                   
+                                                </p>
+                                            </div>
+
+                                                 </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-default" data-dismiss="modal">Save changes</button>
+                                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                    </div> -->
+                                           <!--   </div>
+                                          
+                                        </div>
+                                    </div> 
+                                </td> -->
                                     {% endfor %}
                                    
                                 </tr>
@@ -123,12 +186,18 @@
         </div>
     </div>
 </div>
+
+               
+              
+          
+ <!-- jquery
+		============================================ -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+        <script src="{% static 'jss/vendor/jquery-1.12.4.min.js' %}"></script>
 <!-- Data Table area End-->
 <script src="{% static 'jss/data-table/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'jss/data-table/data-table-act.js' %}"></script>
-  <!-- jquery
-		============================================ -->
-        <script src="{% static 'jss/vendor/jquery-1.12.4.min.js' %}"></script>
+ 
          <!--  animation JS
 		============================================ -->
     <script src="{% static 'jss/animation/animation-active.js' %}"></script>
@@ -192,9 +261,7 @@
         <!-- main JS
             ============================================ -->
         <script src="{% static 'jss/main.js' %}"></script>
-        <!-- tawk chat JS
-            ============================================ -->
-        <!-- <script src="{% static 'jss/tawk-chat.js' %}"></script> -->
+        
 {% endblock userlist %}
 
 
