--- a/adminapp/templates/adminside/salesview.html
+++ b/adminapp/templates/adminside/salesview.html
@@ -80,18 +80,51 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="invoice-wrap">
                         <div class="invoice-img">
-                            {% if day == "day" %}
-                            <h1 style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif;">DAILY SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})</h3>
-                    {% elif day == "month" %}
-                    <h1 style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif;">MONTHLY SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})-({{end_date}})</h3>
-                    {% elif day == "week" %}
-                    <h1 style="color: white;font-family: Verdana, Geneva, Tahoma, sans-serif;">WEEKLY SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})-({{end_date}})</h3>
-                    {% elif day == "custom" %}
-                    <h1 style="color: white;font-family: Verdana, Geneva, Tahoma, sans-serif;">SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})-({{end_date}})</h3>
-                  
-                  
-                    {% endif %}
+                           
+                            <h1 style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif;">MARLUX</h1>
+                    
                         </div>
+                        <!-- Breadcomb area Start-->
+	<div class="breadcomb-area">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<div class="breadcomb-list">
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+								<div class="breadcomb-wp">
+									<div class="breadcomb-icon">
+										<i class="fa-solid fa-calendar-days"></i>
+									</div>
+									<div class="breadcomb-ctn"> {% if day == "day" %}
+                                        <h2> DAILY SALES REPORT</h2>
+										<p>From:{{start_date}}<br><span class="bread-ntd">To: {{start_date}}</span></p>
+                                        {% elif day == "month" %}
+										<h2> MONTHLY SALES REPORT</h2>
+										<p>From:{{start_date}}<br><span class="bread-ntd">To: {{end_date}}</span></p>
+                                        {% elif day == "week" %}
+										<h2> WEEKLY SALES REPORT</h2>
+										<p>From:{{start_date}}<br><span class="bread-ntd">To: {{end_date}}</span></p>
+                                        {% elif day == "custom" %}
+										<h2> CUSTOM SALES REPORT</h2>
+										<p>From:{{start_date}}<br><span class="bread-ntd">To: {{end_date}}</span></p>
+                                        {% endif %}
+                                    
+                                    </div>
+								</div>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-3">
+								<div class="breadcomb-report">
+									<button data-toggle="tooltip" data-placement="left" title="Download Report" class="btn"><a href="{% url 'adminapp:download_pdf'%}" class="fa-solid fa-download text-white"></a></button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Breadcomb area End-->
                         
                         <div class="row d-flex justify-content-evenly mt-5">
                             <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
@@ -125,7 +158,7 @@
                                 </div>
                             </div>
                         </div> 
-                        <a href="{% url 'adminapp:download_pdf'%}">download sales report</a>
+                       
                         <div class="data-table-area">
                             <div class="container">
                                 <div class="row">
